== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== added

=== changed

=== fixed

== Version: 2.0.0-rc4

=== fixed

2012-03-02::
* removed default imagesdir for generateSite

== Version: 2.0.0-rc3

=== fixed

2012-03-01::
* fixed imagesdir typo

== Version: 2.0.0-rc2

=== fixed

2012-03-01::
* updated docs for generateSite
* fixed menu for generateSite

2012-02-27::
* fixed createDist task
* fixed plantUML for generatePDF
* fixed plantUML for generateSite

== Version: 2.0.0-rc1

=== added

2012-02-26::
* copyThemes task
* generateSite task
2021-02-23::
* first version of powershell wrapper
2021-02-22::
* manual test script
2021-01-05::
* dtc wrapper
2021-01-08::
* first definition of a static site taken from arc42-template-project
* updated gradle wrapper (6.6.1)
* added downloadTemplates task
* added feature to automatically create a Config file if it doesn't exist
* configured gradle to run without daemon

=== fixed
2021-02-24::
* [543] dtcw: added pre-requisites check and alternative curl instead of wget
2021-02-22::
* handling of images for generateHTML

== Version 1.3.1
=== Added

=== Changed

=== Fixed

2021-02--28::
* doctoolchain.bat can now handle java properties

== 1.3.1 - 2021-02-27

=== Added

2021-01-29::
* [519] - Describe release process, update changelog
* smaller distribution file through createDist task

2021-01-26::
* [522] - Added sdkman file

2021-01-25::
* [522] - Support for JDK 14
* [514] - Add support of multiple EA project locations in parallel

=== Changed

2021-01-25::
* Add support of multiple EA project locations in parallel #514
* updated Gradle to 6.7.1
* added JDK14 for travis-ci testing
* [517] - update revealJs to 3.9.1 and asciidoctor-revealjs to 2.0.1

=== Fixed

2021-02-22:
- [535] - add initArc42RU task