@@ -11,6 +11,7 @@ plugins {
     id "org.openapi.generator" version "4.3.1"
     id "de.undercouch.download" version "4.1.1"
     id 'org.jbake.site' version '5.3.0'
+    id 'org.gretty' version '3.0.3'
 }
 
 apply plugin:'groovy'
