@@ -9,6 +9,9 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 
 === added
 
+2021-04-07::
+* generateSite can now handle themes
+
 === changed
 
 === fixed
